Fixed overflow hidden on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ body {
   background:radial-gradient(ellipse at center, rgba(255,254,234,1) 0%, rgba(255,254,234,1) 35%, #B7E8EB 100%);
   overflow: hidden;
 }
+.bodyhidden {
+  overflow-x: hidden;
+  position: relative;
+}
 .socialmedia {
 	font-size: 20px;
 }
